<resources>
    <string name="app_name">MyFriendz</string>
    <string name="description_add_friend">Add a friend</string>
    <string name="add_friend">Add friend</string>
    <string name="description_profile_picture">Profile picture</string>
    <string name="description_save_friend">Save Friend</string>
    <string name="last_contacted_hint">No last contact date</string>
    <string name="frequency_hint">No contact frequency data</string>
    <string name="phone_hint">No phone number available</string>
    <string name="email_hint">No email address</string>
    <string name="comments_hint">No comments yet</string>
    <string name="comments_icon_description">Comments Icon</string>
    <string name="email_icon_description">Email icon</string>
    <string name="phone_icon_description">Phone icon</string>
    <string name="frequency_icon_description">Frequency icon</string>
    <string name="last_contacted_icon_description">Last contacted icon</string>
    <string name="edit_friend_button_content_description">Edit Friend</string>
    <string name="error_updating_friend">Error updating friend</string>
    <string name="btn_save_text">Save</string>
    <string name="hint_phone_input">Phone</string>
    <string name="hint_input_email">Email</string>
    <string name="hint_input_name">Name</string>
    <string name="hint_comments">Add comments here</string>
    <string name="hint_friend_since">Update</string>
    <string name="select_friend_since">Select Friend Since</string>
    <string name="selected_date_formatted">Last Contacted: %1$s</string>


    <string name="import_contacts">Import from contacts</string>
    <string name="import_contacts_title">Import friends</string>
    <string name="no_contacts_available">No contacts were found on this device.</string>
    <string name="permission_contacts_denied">Contacts access was denied. Enable it in settings to continue.</string>
    <string name="contacts_permission_rationale">Friendz needs access to contacts to import people you already know.</string>
    <string name="grant_permission">Grant</string>
    <string name="select_all_contacts">Select all</string>
    <string name="deselect_all_contacts">Deselect all</string>
    <string name="import_selected_contacts">Import selected (%1$d)</string>
    <string name="select_contacts_to_import">Select at least one contact to import.</string>
    <string name="error_importing_contacts">Unable to import contacts at the moment.</string>
    <string name="error_loading_contacts">Failed to load contacts. Please check your app permissions and try again.</string>
    <string name="select_contact_for_import">Select contact %1$s for import</string>
    <string name="no_contacts_imported">No contacts were imported.</string>

    <string name="error_message">Error: %1$s</string>
    <string name="error_fetching_data">Failed to load friends list. Please check your connection.</string>
    <string name="error_updating_data">Failed to update friend information.</string>
    <string name="error_deleting_data">Failed to delete friend.</string>
    <string name="error_image_description">Failed to load friends list</string>
    <string name="duplicate_contact_title">Duplicate contact: %1$s</string>
    <string name="create_new">Create new</string>
    <string name="merge_into_existing">Merge into existing</string>
    <string name="skip">Skip</string>
</resources>
